[gd_scene load_steps=29 format=3 uid="uid://cyxl68gsu1cq3"]

[ext_resource type="Script" uid="uid://ct7i66txn5nlv" path="res://Main.gd" id="1_1bvp3"]
[ext_resource type="Texture2D" uid="uid://c1dvple6oywe4" path="res://sprites/BG/BG_front2.png" id="2_0odxb"]
[ext_resource type="Texture2D" uid="uid://dv86kkwdyb4d1" path="res://sprites/BG/BG.png" id="2_4c57u"]
[ext_resource type="PackedScene" uid="uid://b56xjfh487ppi" path="res://Effects/Scenes/WordTarget.tscn" id="2_h2yge"]
[ext_resource type="Script" uid="uid://rwfcyo06mvmc" path="res://parallax_background.gd" id="2_lswn8"]
[ext_resource type="Texture2D" uid="uid://dantvqplx7s5j" path="res://sprites/BG/BG_front1.png" id="3_lswn8"]
[ext_resource type="Texture2D" uid="uid://bo7kwcgem53oj" path="res://sprites/BG/whiteClouds.png" id="4_qsp4k"]
[ext_resource type="Texture2D" uid="uid://bk1w0hkjnml40" path="res://sprites/BG/darkcloudClouds.png" id="5_kq58d"]
[ext_resource type="Texture2D" uid="uid://b8a6hg3wfv0ln" path="res://sprites/BG/BG mountaint2.png" id="6_kq58d"]
[ext_resource type="Texture2D" uid="uid://x5g8l5cixdvd" path="res://Effects/UIbar/heart_full.png" id="8_1u8w0"]
[ext_resource type="PackedScene" uid="uid://37mrkd75xuyu" path="res://Effects/Scenes/star_dust.tscn" id="8_5vw27"]
[ext_resource type="PackedScene" uid="uid://b7xx53rfegin2" path="res://Scenes/Player.tscn" id="9_qsp4k"]
[ext_resource type="PackedScene" uid="uid://ciw61vrsj01cb" path="res://Scenes/EnergyBar.tscn" id="13_a6jrf"]
[ext_resource type="PackedScene" uid="uid://bhvy12wrekoot" path="res://Effects/Scenes/StarDust.tscn" id="14_w48qg"]
[ext_resource type="Script" uid="uid://bgptemvv1pjt7" path="res://Effects/Scenes/StarDust.gd" id="15_vivmo"]
[ext_resource type="PackedScene" uid="uid://etnawg7ke4jv" path="res://Effects/Scenes/BouncyStar.tscn" id="16_2cqfq"]
[ext_resource type="Script" uid="uid://b3haccoyo4w7m" path="res://Effects/Scenes/BouncyStar.gd" id="17_yaehf"]
[ext_resource type="PackedScene" uid="uid://cjacxakp7h7wb" path="res://Effects/Scenes/BouncyStarVariant.tscn" id="18_074og"]
[ext_resource type="Texture2D" uid="uid://brtoj2l8td04o" path="res://Effects/UIbar/button mrouund.png" id="18_htxhm"]
[ext_resource type="Texture2D" uid="uid://k1eg7ewrfmbs" path="res://Effects/UIbar/button mrouundDOWN.png" id="19_jq2sk"]
[ext_resource type="PackedScene" uid="uid://wd4imfyxwyr2" path="res://Effects/Scenes/Lightning.tscn" id="29_htxhm"]
[ext_resource type="PackedScene" uid="uid://dw77id13ag1oi" path="res://Enemies/EnemyMonster.tscn" id="29_kq58d"]
[ext_resource type="PackedScene" uid="uid://cpk86juyb72wj" path="res://Effects/Scenes/ZapHit.tscn" id="29_seu75"]
[ext_resource type="Script" uid="uid://dyxqldwsb77rk" path="res://Effects/Scenes/ZapHit.gd" id="30_htxhm"]
[ext_resource type="Script" uid="uid://dw2spo02x5nhm" path="res://Effects/Scenes/lightning.gd" id="30_jq2sk"]
[ext_resource type="Script" uid="uid://c1xyd6ou1sdu2" path="res://Enemies/EnemyMonster.gd" id="30_seu75"]
[ext_resource type="Script" uid="uid://co11wl7jt4pqu" path="res://Scripts/WordManager.gd" id="31_seu75"]

[sub_resource type="FontFile" id="FontFile_1u8w0"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0

[node name="Main" type="Node2D"]
script = ExtResource("1_1bvp3")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_lswn8")

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(884, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2(139, -8)
texture = ExtResource("2_4c57u")
offset = Vector2(194, 122)

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(879, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2(298, 131)
texture = ExtResource("4_qsp4k")

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(1260, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer7"]
position = Vector2(399, 96)
texture = ExtResource("5_kq58d")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(560, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(395, 224)
texture = ExtResource("6_kq58d")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
visible = false
position = Vector2(373, 428)
texture = ExtResource("6_kq58d")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 0.5)
motion_mirroring = Vector2(952, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(322, 246)
texture = ExtResource("2_0odxb")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(950, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(225, 258)
texture = ExtResource("3_lswn8")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(950, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
visible = false
position = Vector2(365, 364)
texture = ExtResource("3_lswn8")

[node name="Player" parent="." instance=ExtResource("9_qsp4k")]
position = Vector2(286, 199)

[node name="WordTarget" parent="." instance=ExtResource("2_h2yge")]
position = Vector2(-270, -133)

[node name="VoicePlayer" type="AudioStreamPlayer2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="StarDust" parent="UI" instance=ExtResource("8_5vw27")]
position = Vector2(-362, 61)

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
offset_left = 7.0
offset_top = 4.0
offset_right = 305.0
offset_bottom = 35.0

[node name="HeartBar" type="HBoxContainer" parent="UI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Heart1" type="TextureRect" parent="UI/HBoxContainer/HeartBar"]
layout_mode = 2
texture = ExtResource("8_1u8w0")

[node name="Heart2" type="TextureRect" parent="UI/HBoxContainer/HeartBar"]
layout_mode = 2
texture = ExtResource("8_1u8w0")

[node name="Heart3" type="TextureRect" parent="UI/HBoxContainer/HeartBar"]
layout_mode = 2
texture = ExtResource("8_1u8w0")

[node name="EnergyBar" parent="UI/HBoxContainer" instance=ExtResource("13_a6jrf")]
layout_mode = 2

[node name="QuitButton" type="Button" parent="UI/HBoxContainer"]
process_mode = 3
custom_minimum_size = Vector2(20, 15)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = SubResource("FontFile_1u8w0")
theme_override_font_sizes/font_size = 12
text = "Quit"

[node name="RepeatButton" type="TextureButton" parent="UI"]
offset_left = 462.0
offset_top = 2.0
offset_right = 506.0
offset_bottom = 48.0
texture_normal = ExtResource("18_htxhm")
texture_pressed = ExtResource("19_jq2sk")

[node name="StarDust" parent="." instance=ExtResource("14_w48qg")]
position = Vector2(-264, 68)
script = ExtResource("15_vivmo")

[node name="BouncyStar" parent="." instance=ExtResource("16_2cqfq")]
position = Vector2(-250, 76)
script = ExtResource("17_yaehf")

[node name="BouncyStarVariant" parent="." instance=ExtResource("18_074og")]
position = Vector2(-260, 55)
script = ExtResource("17_yaehf")

[node name="ZapHit" parent="." instance=ExtResource("29_seu75")]
position = Vector2(-440, 500)
script = ExtResource("30_htxhm")

[node name="EnemyMonster" parent="." instance=ExtResource("29_kq58d")]
position = Vector2(458, 180)
script = ExtResource("30_seu75")

[node name="Lightning" parent="." instance=ExtResource("29_htxhm")]
script = ExtResource("30_jq2sk")

[node name="WordManager" type="Node2D" parent="."]
script = ExtResource("31_seu75")

[connection signal="pressed" from="UI/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="UI/RepeatButton" to="." method="_on_repeat_button_pressed"]
